centjes-gen/test_resources/balance/error/as-is/conversion-without-cost.cent
currency USD 0.01
currency CHF 0.05

2023-12-17
  | Convert USD to CHF
  * investments 100 USD @ 0.5 CHF
  * investments  50 CHF
